--- a/Introdução a JS/operacoes.html
+++ b/Introdução a JS/operacoes.html
@@ -7,8 +7,14 @@
 </head>
 <body>
     <script>
-        
-    
+        var x = 10, y = 5;
+
+
+        x += 4
+
+        // x = x + 4
+
+        console.log(x)
     </script>
 </body>
 </html>
