--- a/Introdução a JS/variaveis.html
+++ b/Introdução a JS/variaveis.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <script>
+        //TIPAGEM DINÂMICA
         var nome = "Hudson"; //String
         var idade = 18; //Int
         var peso = 70.5; //Float
         var humano = false; //Boolean
 
+        //VETOR
         var alunos = ['Hudson', 'Maria', 'Daniel'];
 
         //Objeto: Várias que guardam mais que um valor de um item
