--- a/ES6/index.html
+++ b/ES6/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-
-    <script src="./scripts/bundle.js"></script>
+    <script src="./Desafios - Conceitos ES6/ex07.js"></script>
+    <!-- <script src="./scripts/bundle.js"></script> -->
 </body>
 </html>
